--- a/package.json
+++ b/package.json
@@ -5,11 +5,21 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
+    "nodemon": "nodemon app.js",
+    "tailwind": "postcss ./src/style.css -o ./src/tailwind.css --watch",
+    "start": "npm run tailwind & npm run nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "developerabz",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "autoprefixer": "^10.4.17",
+    "express": "^4.18.2",
+    "postcss": "^8.4.33"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3",
+    "postcss-cli": "^11.0.0",
+    "tailwindcss": "^3.4.1"
   }
 }
