--- a/package.json
+++ b/package.json
@@ -5,21 +5,30 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "nodemon": "nodemon app.js",
+    "typescript": "tsc --watch",
+    "server": "nodemon app.js",
     "tailwind": "postcss ./src/style.css -o ./src/tailwind.css --watch",
-    "start": "npm run tailwind & npm run nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run typescript & npm run tailwind & npm run server",
+    "test": "npx jest"
   },
   "author": "developerabz",
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.4.17",
+    "better-sqlite3": "^9.4.0",
     "express": "^4.18.2",
     "postcss": "^8.4.33"
   },
   "devDependencies": {
+    "@tsconfig/recommended": "^1.0.3",
+    "@types/better-sqlite3": "^7.6.9",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "postcss-cli": "^11.0.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.3.3"
   }
 }
