--- a/package.json
+++ b/package.json
@@ -9,21 +9,26 @@
     "server": "nodemon app.js",
     "tailwind": "postcss ./src/style.css -o ./src/tailwind.css --watch",
     "start": "npm run typescript & npm run tailwind & npm run server",
-    "test": "npx jest"
+    "test": "jest"
   },
   "author": "developerabz",
   "license": "ISC",
   "dependencies": {
+    "@types/http-errors": "^2.0.4",
     "autoprefixer": "^10.4.17",
     "better-sqlite3": "^9.4.0",
+    "date-fns": "^3.3.1",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "postcss": "^8.4.33"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
     "@tsconfig/recommended": "^1.0.3",
     "@types/better-sqlite3": "^7.6.9",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "postcss-cli": "^11.0.0",
