add force option to remove sqlite db

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Setup db
         run: |
-          rm messager.sqlite
+          rm -f messager.sqlite
           touch messager.sqlite
           sqlite3 messager.sqlite3 < createMessager.sql
       
