--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "esModuleInterop": true
-  }
+  },
+  "exclude": ["actions-runner/**/*"]
 }
