--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,9 @@ jobs:
           rm -f messager.sqlite
           touch messager.sqlite
           sqlite3 messager.sqlite3 < createMessager.sql
+
+      - name: Debug sql
+        run: cat createMessager.sql
       
       - name: Setup and install npm
         run: |
