--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
+    "sql:init": "rm -f messager.sqlite && touch messager.sqlite && sqlite3 messager.sqlite < createMessager.sql",
     "typescript": "tsc --watch",
     "server": "nodemon app.js",
     "tailwind": "postcss ./src/style.css -o ./src/tailwind.css --watch",
-    "start": "npm run typescript & npm run tailwind & npm run server",
+    "start": "npm run sql:init && npm run typescript & npm run tailwind & npm run server",
     "test": "jest"
   },
   "author": "developerabz",
@@ -29,6 +30,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "babel-jest": "^29.7.0",
+    "daisyui": "^4.6.2",
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "postcss-cli": "^11.0.0",
